[gd_scene load_steps=12 format=3 uid="uid://bafyw7pfc5yd8"]

[ext_resource type="Script" path="res://scripts/interactive_objects/monitor.gd" id="1_hjasd"]
[ext_resource type="Texture2D" uid="uid://bm1ci2miuhfdi" path="res://assets/directives/monitor_sheet.png" id="2_o8pql"]
[ext_resource type="Material" uid="uid://csxlxcwxw3h3v" path="res://assets/shaders/rainbow.tres" id="3_4lrw2"]
[ext_resource type="Texture2D" uid="uid://de2snpgxt1tx6" path="res://assets/directives/monitor_effect_sheet.png" id="4_gp856"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ejavl"]

[sub_resource type="Animation" id="Animation_7fn3p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effects:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tsuxx"]
resource_name = "effect"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effects:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uwjmf"]
_data = {
"RESET": SubResource("Animation_7fn3p"),
"effect": SubResource("Animation_tsuxx")
}

[sub_resource type="Animation" id="Animation_p88pt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonitorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8ar0v"]
resource_name = "activate"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonitorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k1wfl"]
_data = {
"RESET": SubResource("Animation_p88pt"),
"activate": SubResource("Animation_8ar0v")
}

[node name="Monitor" type="Node2D"]
script = ExtResource("1_hjasd")

[node name="MonitorSprite" type="Sprite2D" parent="."]
position = Vector2(0, -9)
texture = ExtResource("2_o8pql")
hframes = 4

[node name="Effects" type="Sprite2D" parent="."]
material = ExtResource("3_4lrw2")
position = Vector2(0, -17)
texture = ExtResource("4_gp856")
hframes = 8

[node name="InteractibleObject" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractibleObject"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_ejavl")

[node name="PressFNotice" type="Control" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
z_index = 2
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_left = -4.0
offset_top = -50.0
offset_right = 8.0
offset_bottom = -37.0

[node name="CenterContainer" type="CenterContainer" parent="PressFNotice"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -6.5
offset_right = 3.0
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PressFNotice/CenterContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="Notice" type="Label" parent="PressFNotice/CenterContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Press F to Use"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uwjmf")
}

[node name="MonitorPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k1wfl")
}

[connection signal="area_entered" from="InteractibleObject" to="." method="_on_interactible_object_area_entered"]
[connection signal="area_exited" from="InteractibleObject" to="." method="_on_interactible_object_area_exited"]
